Add template engine, controllers and CSS framework
Add the controllers folder, create the signup and login routes. Install Tailwind as the CSS framework, Pug as the template engine, and PostCSS to transpile Tailwind's CSS files.

Tags: Pug, Tailwind, PurgeCSS, PostCSS

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,3 +1,6 @@
-div
-    h2.text-center login
-        p Init session
+extends ../layout/index
+
+
+block content
+    div
+        h2.text-center.text-2xl.font-extrabold Log In
