--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -5,13 +5,13 @@ block content
     .pt-6.pb-8
         a(href="#")
             .flex.flex-wrap.justify-center
-                img(class="image object-top object-scale-down h-42 w-96" src="/img/nestatelogo.png" alt="Nestate Logo").max-w-full.h-auto.align-middle.border-none
-        h2.text-center.text-2xl.pt-6.pb-0.font-medium.font-serif=pageTitle
+                img(class="image object-top object-scale-down h-48 w-96" src="/img/nestatelogo.png" alt="Nestate Logo").max-w-full.h-auto.align-middle.border-none
+
 
         .mt-2.mx-auto.max-w-md
             .bg-white.py-4.px-4.shadow
                 form.space-y-2.font-serif
-
+                    h2.text-center.text-2xl.font-medium.font-serif=pageTitle
                     div
                         label(for="email").block.text-sm.text-gray-950.mb-2.font-medium E-mail address:
                         input#email.w-full.px-3.py-2.border.border-gray-300.rounded-sm.placeholder-gray-400(placeholder="you@example.com" type="email" name="email")
