--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Nestate | #{pageTitle}
         link(rel="stylesheet", href="/css/app.css" type="text/css")
-    body.min-h-screen.bg-gray-50
+    body.min-h-screen.bg-stone-50
 
         main(class="mx-auto container mt-10 px-2")
             block content
