Add section for forgotten password
The function resetPassword is in charge of the post request.
Add the result of the validationResult request and see if the user does
not exist in the database. Copy the error from the Register module
to the resetPassword module.
Generate a new token for the forgotten password.
Create a new email form in the helpers folder, and send the password
reset email. Then show the message of this action.
Check if the token sent to the user exists in the database and if it
is related to the specific user that requested the new password.
Rethrow the error if the user does not exist.
Render the form for the password reset field.
Add the same validation of express-validator for the email, check that
the result is not empty, identify the resetting user with the one-time
validation token and hash their new password with bcrypt,
then empty the token field and save the user.
Render a new confirmation view with the message
of the new password saved successfully.

--- a/views/auth/confirm.pug
+++ b/views/auth/confirm.pug
@@ -15,7 +15,7 @@ block content
                 if(error)
                     h2.text-center.text-2xl.font-bold.text-md.italic.font-serif.underline.decoration-double.decoration-red-600.underline-offset-2=page
                     p.font-serif.font-normal.text-center.py-2.px-5.rounded-sm.text-md.no-underline.tracking-wide=message
-                        a(href='#' class="no-underline text-green-800 hover:text-green-500")
+                        a(href='/auth/login' class="no-underline text-green-800 hover:text-green-500")
                             p(class="text-lg font-serif font-semibold font-normal tracking-wide italic") please try again.
                 else
                     h2.text-center.text-2xl.font-bold.text-md.italic.font-serif.underline.decoration-double.decoration-yellow-500.underline-offset-2=page
