--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -12,7 +12,7 @@ block content
 
         .mt-2.mx-auto.max-w-md
             .bg-white.py-4.px-4.shadow
-                form.space-y-2.font-serif(method="POST" action="/auth/forgot-password" noValidate)
+                form.space-y-2.font-serif(method="POST" noValidate)
                     if errors
                         div(class="max-w-md mx-auto mb-4")
                             each error in errors
@@ -20,12 +20,8 @@ block content
                                     p.bg-red-600.text-white.rounded-sm.text-xs.text-center.p-2.mb-1.italic=error.msg
                     h2.text-center.text-2xl.font-medium.font-serif=pageTitle
                     div
-                        label(for="email").block.text-sm.text-gray-950.mb-2.font-medium Please enter your email address. We will send you an email to reset your password.
-                        input#email.w-full.px-3.py-2.border.border-gray-300.rounded-sm.placeholder-gray-400(placeholder="you@example.com" type="email" name="email")
+                        label(for="password").block.text-md.text-gray-950.mb-2.font-medium Set your new password:
+                        input#password.w-full.px-3.py-2.border.border-gray-300.rounded-sm.placeholder-gray-400(placeholder="New Password" type="password" name="password")
 
 
-                    input(class='w-full py-2 rounded-sm cursor-pointer text-amber-50 bg-yellow-500 hover:bg-yellow-400' type="submit" value="Send e-mail")
-
-                    div.flex.items-center.justify-start.pt-2
-
-                        a(href="/auth/signup" class="text-xs text-gray-700 hover:text-gray-600") Don't have an account? Sign up here
+                    input(class='w-full py-2 rounded-sm cursor-pointer text-neutral-50 bg-green-900 hover:bg-green-700' type="submit" value="Save Password")
