--- a/views/templates/message.pug
+++ b/views/templates/message.pug
@@ -5,9 +5,9 @@ block content
     .py-8.flex.justify-center
         a(href="#")
             div
-                img(class="image object-top object-scale-down h-48 w-96" src="/img/nestatelogo.png" alt="Nestate Logo").max-w-full.h-auto.align-middle.border-none
+                img(class="image object-top object-scale-down h-48 w-96 m-auto" src="/img/nestatelogo.png" alt="Nestate Logo").max-w-full.h-auto.align-middle.border-none
 
 
-                h2.text-center.text-2xl.font-medium.italic.font-serif=page
+                h2.text-center.text-2xl.font-medium.italic.font-serif.my-6=page
 
                 p.text-xl.font-medium.text-center.my-6.italic.font-serif=message
